...
    <string name="not_registered_yet_question">Not signed yet?</string>
    <string name="type_password_here">Type password here</string>
    <string name="email_is_required">Email is required</string>
    <string name="email_format_is_invalid">Email\'s format is invalid</string>
    <string name="name_is_required">Name is required</string>
    <string name="failed_to_register">Failed to register</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="failed_to_login">Failed to login</string>
    <string name="close">Close</string>
    <string name="empty">Empty :(</string>
    <string name="detail_story">Detail Story</string>
    <string name="story_not_found">The story is not found</string>
    <string name="camera">Camera</string>
...
